Closed
Bug 1665357
Opened 5 years ago
Closed 5 years ago
Perma [tier2] /builds/worker/checkouts/gecko/mozglue/misc/EarlyBlankWindow.cpp:63:12: error: unknown type name 'DPI_AWARENESS_CONTEXT'
Categories
(Core :: mozglue, defect, P5)
Core
mozglue
Tracking
()
RESOLVED
FIXED
82 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | unaffected |
| firefox82 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: alexical)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=315817130&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/BHF6PuXkRNq2D1ASGpOoFA/runs/0/artifacts/public/logs/live_backing.log
"WARNING - /builds/worker/workspace/obj-build/dist/include/mozilla/glue/Debug.h:36:49: warning: GCC does not allow 'format' attribute in this position on a function definition [-Wgcc-compat]
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - inline void printf_stderr(const char* fmt, ...) MOZ_FORMAT_PRINTF(1, 2) {
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - ^
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - /builds/worker/workspace/obj-build/dist/include/mozilla/Attributes.h:915:20: note: expanded from macro 'MOZ_FORMAT_PRINTF'
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - __attribute__((format(__MINGW_PRINTF_FORMAT, stringIndex, firstToCheck)))
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - ^
[task 2020-09-16T10:22:29.134Z] 10:22:29 ERROR - /builds/worker/checkouts/gecko/mozglue/misc/EarlyBlankWindow.cpp:63:12: error: unknown type name 'DPI_AWARENESS_CONTEXT'
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - WINUSERAPI DPI_AWARENESS_CONTEXT WINAPI GetThreadDpiAwarenessContext();
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - ^
[task 2020-09-16T10:22:29.134Z] 10:22:29 ERROR - /builds/worker/checkouts/gecko/mozglue/misc/EarlyBlankWindow.cpp:64:53: error: unknown type name 'DPI_AWARENESS_CONTEXT'
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - WINUSERAPI BOOL WINAPI AreDpiAwarenessContextsEqual(DPI_AWARENESS_CONTEXT,
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - ^
[task 2020-09-16T10:22:29.134Z] 10:22:29 ERROR - /builds/worker/checkouts/gecko/mozglue/misc/EarlyBlankWindow.cpp:65:53: error: unknown type name 'DPI_AWARENESS_CONTEXT'
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - DPI_AWARENESS_CONTEXT);
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - ^
[task 2020-09-16T10:22:29.134Z] 10:22:29 WARNING - /builds/worker/checkouts/gecko/mozglue/misc/EarlyBlankWindow.cpp:266:21: warning: comparison of integers of different signs: 'int' and 'unsigned int' [-Wsign-compare]
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - for (int i = 0; i < sizeof(rects) / sizeof(rects[0]); ++i) {
[task 2020-09-16T10:22:29.134Z] 10:22:29 INFO - ~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2020-09-16T10:22:29.135Z] 10:22:29 WARNING - /builds/worker/checkouts/gecko/mozglue/misc/EarlyBlankWindow.cpp:268:28: warning: comparison of integers of different signs: 'int' and 'unsigned int' [-Wsign-compare]
[task 2020-09-16T10:22:29.135Z] 10:22:29 INFO - for (int y = rect.y; y < rect.y + rect.height; ++y) {
[task 2020-09-16T10:22:29.135Z] 10:22:29 INFO - ~ ^ ~~~~~~~~~~~~~~~~~~~~
[task 2020-09-16T10:22:29.135Z] 10:22:29 ERROR - /builds/worker/checkouts/gecko/mozglue/misc/EarlyBlankWindow.cpp:366:36: error: use of undeclared identifier 'DPI_AWARENESS_CONTEXT_PER_MONITOR_AWARE'
[task 2020-09-16T10:22:29.135Z] 10:22:29 INFO - DPI_AWARENESS_CONTEXT_PER_MONITOR_AWARE)) {
[task 2020-09-16T10:22:29.135Z] 10:22:29 INFO - ^
[task 2020-09-16T10:22:29.135Z] 10:22:29 INFO - 3 warnings and 4 errors generated.
[task 2020-09-16T10:22:29.135Z] 10:22:29 ERROR - make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:725: EarlyBlankWindow.o] Error 1
..
INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/accessible/windows/msaa'
[task 2020-09-16T10:22:48.342Z] 10:22:48 ERROR - make[2]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:34: compile] Error 2
[task 2020-09-16T10:22:48.342Z] 10:22:48 ERROR - make[1]: *** [/builds/worker/checkouts/gecko/config/rules.mk:384: default] Error 2
[task 2020-09-16T10:22:48.342Z] 10:22:48 INFO - make: *** [client.mk:125: build] Error 2
[task 2020-09-16T10:22:48.342Z] 10:22:48 INFO - 47 compiler warnings present.
[task 2020-09-16T10:22:48.423Z] 10:22:48 ERROR - Return code: 2
[task 2020-09-16T10:22:48.423Z] 10:22:48 WARNING - setting return code to 2
[task 2020-09-16T10:22:48.423Z] 10:22:48 FATAL - 'mach build -v' did not run successfully. Please check log for errors.
[task 2020-09-16T10:22:48.423Z] 10:22:48 FATAL - Running post_fatal callback...
[task 2020-09-16T10:22:48.423Z] 10:22:48 FATAL - Exiting -1"```
Comment 1•5 years ago
•
|
||
Doug,could you take a look at this? Seems to be caused by bug 1656526
Flags: needinfo?(dothayer)
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → dothayer
Status: NEW → ASSIGNED
Flags: needinfo?(dothayer)
| Assignee | ||
Comment 2•5 years ago
|
||
This is currently failing the tier 2 MinGW-Clang builds, complaining
that DPI_AWARENESS_CONTEXT is not defined. Accordingly I pulled out the
logic from WinUtils.h which ensures it is defined into a shared header.
Pushed by dothayer@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f780b401904f
Ensure DPI_AWARENESS_CONTEXT is defined r=mhowell
Comment 4•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox82:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Comment 5•5 years ago
|
||
Set release status flags based on info from the regressing bug 1656526
status-firefox80:
--- → unaffected
status-firefox81:
--- → unaffected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
| Comment hidden (Intermittent Failures Robot) |
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•